[package]
name = "core-compute"
version = "0.4.0"
edition = "2021"
authors = ["ElectroMutex"]
description = "fast , simple and cross-platform GPGPU parallel computing library"
license = "MIT"
documentation = "https://docs.rs/core-compute/latest/core_compute/"
homepage = "https://github.com/SkillfulElectro/core-compute.git"
repository = "https://github.com/SkillfulElectro/core-compute.git"
readme = "README.md"

[dependencies]
wgpu = "22"
pollster = "0.2"
bytemuck = { version = "1.16", features = ["derive"] }
flume = "0.11"

